# gnu_cockroach

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.am.common  README  README-dev  TODO  TODO.org  bootstrap  bootstrap.conf  configure.ac
doc/: Makefile.am  cockroach.texi
lib/: .gitignore  Makefile.am
po/: .gitignore  POTFILES.in
src/: Makefile.am  bitmap.c  bitmap.h  cockroach.c  cockroach.h  config.h.in  libroach.c  plugins.c  plugins.h  roach.c  roach.h  syscall_names.c  syscall_specs.c
src/arch/: i386.c  linux-generic.c  linux-i386.c  linux_generic.c  linux_i386.c  linux_sparc64.c  linux_x86_64.c  sparc_syscall_names.h  syscall_names.h
src/plugins/: Makefile.am  plugin.h
src/plugins/fail_mem/: Makefile.am  fail_mem.c
src/plugins/inhibit/: Makefile.am  inhibit.c
src/plugins/translate/: Makefile.am  translate.c
tests/: Makefile.am  test_bitmap.c  test_scspecs.c
testsuite/: Makefile.am
testsuite/cockroach.base/: Makefile.am  base.exp  inhibit.exp  test_a.c  translate.exp
testsuite/lib/: cockroach.exp
testsuite/unit/: Makefile.am  test_bitmap.c  test_scspecs.c
